2018-05-07  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #12683]
	* sysdeps/unix/sysv/linux/aarch64/sigcontextinfo.h (ucontext_get_pc):
	New function.

	[BZ #12683]
	* sysdeps/unix/sysv/linux/powerpc/syscall_cancel.S: New file.
	* sysdeps/unix/sysv/linux/powerpc/sysdep-cancel.h
	(__pthread_get_pc): New function.

	[BZ #12683]
	* sysdeps/unix/sysv/linux/i386/Makefile
	[$(subdir) = elf] (sysdep-rtld_routines): Add libc-do-syscall object.
	* sysdeps/unix/sysv/linux/i386/syscall_cancel.S: New file.
	* sysdeps/unix/sysv/linux/i386/sigcontextinfo.h (ucontext_get_pc):
	New function.

	[BZ #12683]
	* sysdeps/unix/sysv/linux/x86_64/x32/sysdep.h (__syscall_arg_t):
	Define type for x32.
	(__SSC): Add platform specific macro.
	* include/libc-pointer-arith.h (__integer_if_pointer_type_sub,
	__integer_if_pointer_type, cast_to_integer): Parametrize integer type
	cast.
	(cast_to_uinteger): New macro.

	[BZ #12683]
	* sysdeps/unix/sysv/linux/x86_64/cancellation.S: Remove file.
	* sysdeps/unix/sysv/linux/x86_64/libc-cancellation.S: Remove file.
	* sysdeps/unix/sysv/linux/x86_64/librt-cancellation.S: Remove file.
	* sysdeps/unix/sysv/linux/x86_64/sigcontextinfo.h (ucontext_get_pc):
	New function.
	* sysdeps/x86_64/nptl/tcb-offsets.sym (TCB_CANCELING_BITMASK):
	Remove.

	[BZ #12683]
	* manual/llio.texi: Adjust comments regarding
	pthread_enable_asynccancel and pthread_disable_asynccancel.
	* nptl/Makefile (routines): Add syscall_cancel object.
	(libpthread-routines): Add pthread_kill_internal and remove
	cancellation object.
	(CFLAGS-cancellation.c): Remove rule.
	(CFLAGS-syscall_cancel.c): New rule.
	(tests): Add tst-cancel28.
	* nptl/Versions [GLIBC_PRIVATE] (libc): Add __syscall_cancel,
	__syscall_cancel_arch_start, and __syscall_cancel_arch_end.
	* nptl/cancellation.c: Remove file.
	* sysdeps/nptl/librt-cancellation.c: Likewise.
	* nptl/descr.h (CANCELING_BIT, CANCELING_BITMASK): Remove define.
	(CANCELED_BIT, EXITING_BIT, TERMINATED_BIT, SETXID_BIT,